--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
-  <title>Conrad's CV</title>
   <!-- Meta -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Responsive HTML5 Resume/CV Template for Developers">
-  <meta name="author" content="Xiaoying Riley at 3rd Wave Media">
+  <!-- <meta name="description" content="Responsive HTML5 Resume/CV Template for Developers"> -->
+  <!-- <meta name="author" content="Xiaoying Riley at 3rd Wave Media"> -->
   <link rel="shortcut icon" href="favicon.ico">
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,400italic,300italic,300,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
   <!-- Global CSS -->
@@ -27,6 +26,7 @@
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
+    <title>Conrad's CV</title>
 </head>
 
 <body>
@@ -216,7 +216,7 @@
           <div class="item">
             <h3 class="level-title">Python</h3>
             <div class="level-bar">
-              <div class="level-bar-inner" data-level="60%">
+              <div class="level-bar-inner" data-level="50%">
               </div>
             </div><!--//level-bar-->
           </div><!--//item-->
@@ -224,7 +224,7 @@
           <div class="item">
             <h3 class="level-title">Javascript &amp; HTML</h3>
             <div class="level-bar">
-              <div class="level-bar-inner" data-level="50%">
+              <div class="level-bar-inner" data-level="60%">
               </div>
             </div><!--//level-bar-->
           </div><!--//item-->
@@ -232,9 +232,9 @@
         </div>
       </section><!--//skills-section-->
 
-      <section class="section">
+      <section class="section comic-section">
         <h2 class="section-title"><i class="fa fa-book"></i>Comic Strip</h2>
-        <div class="comic">
+        <div class="comic item">
           <a href="https://www.storyboardthat.com/storyboards/c-mac/dplyr--mutate">
             <img src="//sbt.blob.core.windows.net/storyboards/c-mac/dplyr--mutate.png"
             style="width: 850px; z-index: 1; position: relative;"/>
