Comment out comic section

--- a/index.html
+++ b/index.html
@@ -232,9 +232,9 @@
         </div>
       </section><!--//skills-section-->
 
-      <section class="section comic-section">
+      <!-- <section class="section comic-section">
         <h2 class="section-title"><i class="fa fa-book"></i>Comic Strip</h2>
-        <div class="comic item">
+        <div class="comic">
           <a href="https://www.storyboardthat.com/storyboards/c-mac/dplyr--mutate">
             <img src="//sbt.blob.core.windows.net/storyboards/c-mac/dplyr--mutate.png"
             style="width: 850px; z-index: 1; position: relative;"/>
@@ -242,7 +242,7 @@
           <br>
           <a href="http://www.storyboardthat.com">Made with Storyboard That</a>
         </div>
-      </section>
+      </section> -->
 
       <section class="section">
         <h2 class="section-title"><i class="fa fa-laptop"></i>R Playground</h2>
