--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- <meta name="description" content="Responsive HTML5 Resume/CV Template for Developers"> -->
-  <!-- <meta name="author" content="Xiaoying Riley at 3rd Wave Media"> -->
+  <meta name="author" content="Conrad MacCormick">
   <link rel="shortcut icon" href="favicon.ico">
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,400italic,300italic,300,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
   <!-- Global CSS -->
@@ -26,7 +25,7 @@
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
-    <title>Conrad's CV</title>
+    <title>conrad-mac : home</title>
 </head>
 
 <body>
@@ -34,9 +33,11 @@
     <div class="sidebar-wrapper">
       <div class="profile-container">
         <!--img class="profile" src="assets/images/profile.png" alt="" /-->
-        <img class="profile img-circle" src="assets/images/profile2.png" alt="" />
+        <img class="profile img-circle morph" src="assets/images/profile2.png" alt="" />
         <h1 class="name">Conrad MacCormick</h1>
-        <h3 class="tagline">Senior Data Analyst</h3>
+        <!-- <h3 class="tagline">Senior Data Analyst</h3> -->
+        <!-- <span style="display: inline;"> > </span> -->
+        <h3 class="tagline"><span class="typed" style="display: inline;"></span></h3>
       </div><!--//profile-container-->
 
       <div class="contact-container container-block">
@@ -59,19 +60,23 @@
         </div><!--//item-->
       </div><!--//education-container-->
 
-      <div class="languages-container container-block">
+      <!-- <div class="languages-container container-block">
         <h2 class="container-block-title">Languages</h2>
         <ul class="list-unstyled interests-list">
           <li>English <span class="lang-desc">(Native)</span></li>
           <li>German <span class="lang-desc">(Beginner)</span></li>
         </ul>
-      </div><!--//interests-->
+      </div> -->
 
       <div class="interests-container container-block">
         <h2 class="container-block-title">Interests</h2>
         <ul class="list-unstyled interests-list">
-          <li>Playing guitar</li>
-          <li>Reading</li>
+          <li>Playing guitar
+            <!-- <i class="fa fa-music"></i> -->
+          </li>
+          <li>Reading
+            <!-- <i class="fa fa-book"></i> -->
+          </li>
           <li>Snowboarding</li>
           <li>Programming</li>
         </ul>
@@ -82,18 +87,23 @@
     <div class="main-wrapper">
 
       <section class="section summary-section">
-        <h2 class="section-title"><i class="fa fa-user"></i>Career Profile</h2>
+        <h2 class="section-title"><i class="fa fa-user"></i>About Me</h2>
         <div class="summary">
-          <!--p>Summarise your career here lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-          You can <a href="http://themes.3rdwavemedia.com/website-templates/orbit-free-resume-cv-template-for-developers/" target="_blank">
-          download this free resume/CV template here</a>. Aenean commodo ligula eget dolor aenean massa. Cum sociis natoque
-          penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu.</p-->
-          <p>I graduated from Victoria University of Wellington in 2010 with a Bachelor of Science, majoring in geography.
-            As well as geography, I also completed papers in statistics and political science.</p>
+          <p>
+            I am a highly motivated analyst with more than five years experience in New Zealand's public sector.
+            I am passionate about exploring, analysing and solving problems with data of all sorts! I have experience and proficiency
+            using a wide range of analytical software (R, SAS, SQL, Python, etc.).
+          </p>
+          <p>
+            I graduated from Victoria University of Wellington in 2010 with a Bachelor of Science, majoring in geography.
+            As well as geography, I also completed papers in statistics and political science.
+          </p>
 
-          <p>I have worked as an analyst at Statistics NZ and the Ministry of Social Development and am currently on secondment
+          <p>
+            I have worked as an analyst at Statistics New Zealand and the Ministry of Social Development and am currently on secondment
             to the Social Investment Unit (formerly the Social Sector Investment Change Program) as a Senior Analyst working daily
-            with Statsistics New Zealand's Integrated Data Infrastructure (IDI).</p>
+            with Statsistics New Zealand's Integrated Data Infrastructure (IDI).
+          </p>
         </div><!--//summary-->
       </section><!--//section-->
 
@@ -109,13 +119,43 @@
             <div class="company">Social Investment Unit</div>
           </div><!--//meta-->
           <div class="details">
-            <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-              Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et
-              magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies
-              nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo.</p>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-              laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-              architecto beatae vitae dicta sunt explicabo. </p>
+            <p>As of April 2016, the Social Sector Investment Change Program became the Social Investment Unit.
+              I am seconded to the team as a Senior Analyst. My responsibilities in this role include
+              using Statistics NZ’s Integrated Data Infrastructure (IDI) to explore and understand the effectiveness
+              of government investment in social services.</p>
+          </div><!--//details-->
+        </div><!--//item-->
+
+        <div class="item">
+          <div class="meta">
+            <div class="upper-row">
+              <h3 class="job-title">Business Analyst</h3>
+              <div class="time">October 2015 - March 2016</div>
+            </div><!--//upper-row-->
+            <div class="company">Social Sector Investment Change Program (SSICP)</div>
+          </div><!--//meta-->
+          <div class="details">
+            <p>From October 2015 I was located at the Treasury as part of the Social Sector
+              Investment Change Programme (SSICP). My role involved coordinating and helping to
+              project manage a software proof-of-concept which included stakeholder engagement
+              with both NGOs and a variety of government agencies.</p>
+          </div><!--//details-->
+        </div><!--//item-->
+
+        <div class="item">
+          <div class="meta">
+            <div class="upper-row">
+              <h3 class="job-title">Analyst</h3>
+              <div class="time">September 2015</div>
+            </div><!--//upper-row-->
+            <div class="company">New Zealand Treasury</div>
+          </div><!--//meta-->
+          <div class="details">
+            <p>
+              In September 2015 I co-located to the Treasury to sit with the Analytics and Insights team.
+              I helped to analyse and understand the life pathways of young New Zealanders using Statistics
+              New Zealand’s Integrated Data Infrastructure (IDI).
+            </p>
           </div><!--//details-->
         </div><!--//item-->
 
@@ -128,10 +168,14 @@
             <div class="company">Ministry of Social Development (MSD)</div>
           </div><!--//meta-->
           <div class="details">
-            <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing elit.
-              Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et
-              magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec,
-              pellentesque eu, pretium quis, sem.</p>
+            <p>
+              My role at the Ministry of Social Development is as a Forecasting and Costing Analyst.
+              My responsibilities include regular forecasting of Vote Social Development appropriations
+              and cost modelling of benefit-related policies.
+            </p>
+            <p>
+              I have been on secondment from this role since September 2015.
+            </p>
 
           </div><!--//details-->
         </div><!--//item-->
@@ -139,32 +183,16 @@
         <div class="item">
           <div class="meta">
             <div class="upper-row">
-              <h3 class="job-title">Business Analyst</h3>
-              <div class="time">September 2015 - March 2016</div>
-            </div><!--//upper-row-->
-            <div class="company">Social Sector Investment Change Program (SSICP)</div>
-          </div><!--//meta-->
-          <div class="details">
-            <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing
-              elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus
-              et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies
-              nec, pellentesque eu, pretium quis, sem.</p>
-          </div><!--//details-->
-        </div><!--//item-->
-
-        <div class="item">
-          <div class="meta">
-            <div class="upper-row">
-              <h3 class="job-title">Statistical Analyst (Level 2)</h3>
+              <h3 class="job-title">Statistical Analyst</h3>
               <div class="time">October 2011 - December 2014</div>
             </div><!--//upper-row-->
             <div class="company">Statistics New Zealand</div>
           </div><!--//meta-->
           <div class="details">
-            <p>Describe your role here lorem ipsum dolor sit amet, consectetuer adipiscing
-              elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus
-              et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies
-              nec, pellentesque eu, pretium quis, sem.</p>
+            <p>
+              I worked as a Statistical Analyst – Level 2 at Statistics New Zealand. I worked in the
+               Statistical Methods unit where my role utilised my expertise in a variety of methodological domains.
+            </p>
           </div><!--//details-->
         </div><!--//item-->
 
@@ -200,7 +228,7 @@
           <div class="item">
             <h3 class="level-title">R &amp; Shiny</h3>
             <div class="level-bar">
-              <div class="level-bar-inner" data-level="80%">
+              <div class="level-bar-inner" data-level="90%">
               </div>
             </div><!--//level-bar-->
           </div><!--//item-->
@@ -208,7 +236,7 @@
           <div class="item">
             <h3 class="level-title">SAS</h3>
             <div class="level-bar">
-              <div class="level-bar-inner" data-level="80%">
+              <div class="level-bar-inner" data-level="90%">
               </div>
             </div><!--//level-bar-->
           </div><!--//item-->
@@ -216,7 +244,7 @@
           <div class="item">
             <h3 class="level-title">Python</h3>
             <div class="level-bar">
-              <div class="level-bar-inner" data-level="50%">
+              <div class="level-bar-inner" data-level="60%">
               </div>
             </div><!--//level-bar-->
           </div><!--//item-->
@@ -294,5 +322,21 @@
   <script type="text/javascript" src="assets/js/main.js"></script>
   <!-- shiny -->
   <script type="text/javascript" src="shared/shiny.js"></script>
+  <script src="assets/js/typed.js"></script>
+  <script>
+      $(function(){
+          $(".typed").typed({
+              strings: [
+                "Data Explorer",
+                "Data Wrangler",
+                "Data Visualiser",
+                "Data Wizard",
+                "Data Scientist",
+                "Data Analyst"
+              ],
+              typeSpeed: 130
+          });
+      });
+  </script>
 </body>
 </html>
