--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <!-- <li class="phone"><i class="fa fa-phone"></i><a href="tel:64 27 XXXXXX">+64 27 XXXXXX</a></li> -->
           <!-- <li class="website"><i class="fa fa-globe"></i><a href="https://conradmaccormick.com" target="_blank">conradmaccormick.com</a></li> -->
           <li class="linkedin"><i class="fa fa-linkedin"></i><a href="https://nz.linkedin.com/in/conrad-maccormick-09699591" target="_blank">conrad-maccormick</a></li>
-          <li class="github"><i class="fa fa-github"></i><a href="https://github.com/conrad-mac" target="_blank"></a>conrad-mac</li>
+          <li class="github"><i class="fa fa-github"></i><a href="https://github.com/conrad-mac" target="_blank">conrad-mac</a></li>
           <li class="stackoverflow"><i class="fa fa-stack-overflow"></i><a href="http://stackoverflow.com/users/7359650/conrad-mac" target="_blank">conrad-mac</a></li>
           <!--li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/3rdwave_themes" target="_blank">@twittername</a></li-->
         </ul>
