--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="sidebar-wrapper">
       <div class="profile-container">
         <!--img class="profile" src="assets/images/profile.png" alt="" /-->
-        <img class="profile img-circle morph" src="assets/images/profile2.png" alt="" />
+        <img class="profile img-circle morph" src="assets/images/profile.jpg" alt="" />
         <h1 class="name">Conrad MacCormick</h1>
         <!-- <h3 class="tagline">Senior Data Analyst</h3> -->
         <!-- <span style="display: inline;"> > </span> -->
@@ -73,7 +73,7 @@
       <div class="interests-container container-block">
         <h2 class="container-block-title">Interests</h2>
         <ul class="list-unstyled interests-list">
-          <li><i class="fa fa-music"></i> Playing guitar (and bass)</li>
+          <li><i class="fa fa-music"></i> Playing guitar</li>
           <li><i class="fa fa-book"></i> Reading</li>
           <li><i class="fa fa-snowflake-o"></i> Snowboarding</li>
           <li><i class="fa fa-terminal"></i> Programming</li>
@@ -90,18 +90,16 @@
         <div class="summary">
           <p>
             I am a highly motivated analyst with more than five years experience in New Zealand's public sector.
-            I am passionate about exploring, analysing and solving problems with data of all sorts! I have experience and proficiency
-            using a wide range of analytical software (R, SAS, SQL, Python, etc.).
+            I am passionate about exploring, analysing and solving problems with data of all kinds! I have experience and proficiency using a wide range of analytical software and communicating results to non-technical audiences.
           </p>
+
           <p>
             I graduated from Victoria University of Wellington in 2010 with a Bachelor of Science, majoring in geography.
             As well as geography, I also completed papers in statistics and political science.
           </p>
 
           <p>
-            I have worked as an analyst at Statistics New Zealand and the Ministry of Social Development and am currently on secondment
-            to the Social Investment Unit (formerly the Social Sector Investment Change Program) as a Senior Analyst. I am part of
-            a team that works daily with Statsistics New Zealand's Integrated Data Infrastructure (IDI).
+            I have worked as an analyst at Statistics New Zealand and the Ministry of Social Development and am currently on secondment to the Social Investment Agency (formerly the Social Investment Unit) as a Senior Analyst. I am part of a team that works daily with Statistics New Zealand's Integrated Data Infrastructure (IDI).
           </p>
         </div><!--//summary-->
       </section><!--//section-->
@@ -113,13 +111,13 @@
           <div class="meta">
             <div class="upper-row">
               <h3 class="job-title">Senior Analyst</h3>
-              <div class="time">April 2016 - Present</div>
+              <div class="time">July 2017 - Present</div>
             </div><!--//upper-row-->
-            <div class="company">Social Investment Unit</div>
+            <div class="company">Social Investment Agency</div>
           </div><!--//meta-->
           <div class="details">
-            <p>As of April 2016, the Social Sector Investment Change Program became the Social Investment Unit.
-              I am seconded to the team as a Senior Analyst. My responsibilities in this role include
+            <p>As of July 2017, the Social Investment Unit became the Social Investment Agency.
+              I remain seconded as a Senior Analyst. My responsibilities in this role include
               using Statistics NZ’s Integrated Data Infrastructure (IDI) to explore and understand the effectiveness
               of government investment in social services.</p>
           </div><!--//details-->
@@ -128,7 +126,23 @@
         <div class="item">
           <div class="meta">
             <div class="upper-row">
-              <h3 class="job-title">Business Analyst</h3>
+              <h3 class="job-title">Senior Analyst</h3>
+              <div class="time">April 2016 - June 2017</div>
+            </div><!--//upper-row-->
+            <div class="company">Social Investment Unit</div>
+          </div><!--//meta-->
+          <div class="details">
+            <p>As of April 2016, the Social Sector Investment Change Program became the Social Investment Unit.
+              I was seconded to the team as a Senior Analyst. My responsibilities in this role included
+              using Statistics NZ’s Integrated Data Infrastructure (IDI) to explore and understand the effectiveness
+              of government investment in social services.</p>
+          </div><!--//details-->
+        </div><!--//item-->
+
+        <div class="item">
+          <div class="meta">
+            <div class="upper-row">
+              <h3 class="job-title">Analyst</h3>
               <div class="time">October 2015 - March 2016</div>
             </div><!--//upper-row-->
             <div class="company">Social Sector Investment Change Program (SSICP)</div>
@@ -151,7 +165,7 @@
           </div><!--//meta-->
           <div class="details">
             <p>
-              In September 2015 I co-located to the Treasury to sit with the Analytics and Insights team.
+              In September 2015 I was located at the Treasury to sit with the Analytics and Insights team.
               I helped to analyse and understand the life pathways of young New Zealanders using Statistics
               New Zealand’s Integrated Data Infrastructure (IDI).
             </p>
@@ -173,7 +187,7 @@
               and cost modelling of benefit-related policies.
             </p>
             <p>
-              I have been on secondment from this role since September 2015.
+              <i>I have been on secondment from this role since September 2015.</i>
             </p>
 
           </div><!--//details-->
@@ -189,8 +203,8 @@
           </div><!--//meta-->
           <div class="details">
             <p>
-              I worked as a Statistical Analyst – Level 2 at Statistics New Zealand. I worked in the
-               Statistical Methods unit where my role utilised my expertise in a variety of methodological domains.
+              I worked as a Statistical Analyst at Statistics New Zealand. I worked in the
+               Statistical Methods unit where my role utilised my expertise in a variety of methodological areas.
             </p>
           </div><!--//details-->
         </div><!--//item-->
@@ -250,7 +264,7 @@
           </div><!--//item-->
 
           <div class="item">
-            <h3 class="level-title">Statistical Analysis and Reasoning</h3>
+            <h3 class="level-title">Statistical Analysis</h3>
             <div class="level-bar">
               <div class="level-bar-inner" data-level="80%">
               </div>
@@ -260,7 +274,7 @@
           <div class="item">
             <h3 class="level-title">Javascript &amp; HTML</h3>
             <div class="level-bar">
-              <div class="level-bar-inner" data-level="60%">
+              <div class="level-bar-inner" data-level="75%">
               </div>
             </div><!--//level-bar-->
           </div><!--//item-->
@@ -350,9 +364,10 @@
                 "Data Explorer",
                 "Data Wrangler",
                 "Data Visualiser",
-                "Data Wizard",
-                "Data Scientist",
-                "Data Analyst"
+                "Data Communicator",
+                "Data Analyst",
+                "Data Scientist"
+
               ],
               typeSpeed: 130
           });
