--- a/index.html
+++ b/index.html
@@ -311,10 +311,15 @@
           <code data-type="sample-code">
             # Have a go!
             library(ggplot2)
+            library(dplyr)
 
-            ggplot(mpg, aes(class, cty)) +
-                geom_bar(stat = "identity") +
-                facet_grid(year ~ .)
+            ggplot(mpg, aes(class)) +
+                geom_bar(fill = "grey", width = 0.6) +
+                geom_bar(data = filter(mpg, class == "suv"),
+                         fill = "steelblue", width = 0.6) +
+                coord_flip() +
+                ggtitle("Most cars in this dataset are SUVs")
+
           </code>
           <code data-type="solution">
 
