Added projects section + minor updates

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
-    <title>conrad-mac : home</title>
+    <title>Conrad MacCormick : home</title>
 </head>
 
 <body>
@@ -39,7 +39,7 @@
         <h1 class="name">Conrad MacCormick</h1>
         <!-- <h3 class="tagline">Senior Data Analyst</h3> -->
         <!-- <span style="display: inline;"> > </span> -->
-        <h3 class="tagline"><span class="typed" style="display: inline;"></span></h3>
+        <h3 class="tagline">Data <span class="typed" style="display: inline;"></span></h3>
       </div><!--//profile-container-->
 
       <div class="contact-container container-block">
@@ -90,7 +90,7 @@
         <div class="summary">
           <p>
             I am a highly motivated analyst with more than five years experience in New Zealand's public sector.
-            I am passionate about exploring, analysing and solving problems with data of all kinds! I have experience and proficiency using a wide range of analytical software and communicating results to non-technical audiences.
+            I am passionate about exploring, analysing and solving problems with data of all kinds. I have experience and proficiency using a wide range of analytical software and communicating results to non-technical audiences.
           </p>
 
           <p>
@@ -100,6 +100,9 @@
 
           <p>
             I have worked as an analyst at Statistics New Zealand and the Ministry of Social Development and am currently on secondment to the Social Investment Agency (formerly the Social Investment Unit) as a Senior Analyst. I am part of a team that works daily with Statistics New Zealand's Integrated Data Infrastructure (IDI).
+          </p>
+          <p>
+            I am currently co-organiser of the <a href="https://www.meetup.com/Wellington-R-Users-Group-WRUG/">Wellington R User's Group (WRUG)</a> .
           </p>
         </div><!--//summary-->
       </section><!--//section-->
@@ -211,29 +214,38 @@
 
       </section><!--//section-->
 
-      <!-- <section class="section projects-section">
+      <section class="section projects-section">
         <h2 class="section-title"><i class="fa fa-archive"></i>Projects</h2>
         <div class="intro">
-          <p>You can list your side projects or open source libraries in this section. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum et ligula in nunc bibendum fringilla a eu lectus.</p>
+          <p>The following are a collection of side projects I have worked on in my spare time.</p>
         </div>
         <div class="item">
-          <span class="project-title"><a href="#hook">Velocity</a></span> - <span class="project-tagline">A responsive website template designed to help startups promote, market and sell their products.</span>
-
+          <span class="project-title"><a href="https://conrad.shinyapps.io/vplyr/">vplyr</a></span> - <span class="project-tagline">
+            uses R, <a href="https://shiny.rstudio.com/">shiny</a> and <a href="https://www.talater.com/annyang/">annyang</a> to analyse and visualise data using speech recognition
+            (<a href="https://github.com/conrad-mac/vplyr">code</a>).
+          </span>
         </div>
         <div class="item">
-          <span class="project-title"><a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-web-development-agencies-devstudio/" target="_blank">DevStudio</a></span> -
-          <span class="project-tagline">A responsive website template designed to help web developers/designers market their services. </span>
+          <span class="project-title"><a href="https://conrad.shinyapps.io/high-risk-intersections-nz/">NZ's Highest Risk Intersections (2003-2012)</a></span> - <span class="project-tagline">
+            uses R, <a href="https://shiny.rstudio.com/">shiny</a> and <a href="https://rstudio.github.io/leaflet/">leaflet</a>  to visualise the highest risk intersections in New Zealand during the period 2003 to 2012.
+          </span>
         </div>
         <div class="item">
-          <span class="project-title"><a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-for-startups-tempo/" target="_blank">Tempo</a></span> - <span class="project-tagline">A responsive website template designed to help startups promote their products or services and to attract users &amp; investors</span>
+          <span class="project-title"><a href="https://conrad-mac.github.io/d3/cricket-grounds/">Cricket Grounds Around the World (with D3.js)</a></span> - <span class="project-tagline">
+            uses <a href="https://d3js.org"> D3js </a> to draw the shapes and sizes of cricket grounds from around the world (<a href="https://github.com/conrad-mac/d3/tree/gh-pages/cricket-grounds">code</a>).
+          </span>
         </div>
         <div class="item">
-          <span class="project-title"><a href="hhttp://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-mobile-apps-atom/" target="_blank">Atom</a></span> - <span class="project-tagline">A comprehensive website template solution for startups/developers to market their mobile apps. </span>
+          <span class="project-title"><a href="https://wrug.shinyapps.io/questionnaire/">Wellington R Users Group (WRUG) Community Questionnaire</a></span> - <span class="project-tagline">
+            This is a shiny app I created to understand the topics that Wellington's R community would most like to learn about.
+          </span>
         </div>
         <div class="item">
-          <span class="project-title"><a href="http://themes.3rdwavemedia.com/website-templates/responsive-bootstrap-theme-for-mobile-apps-delta/" target="_blank">Delta</a></span> - <span class="project-tagline">A responsive Bootstrap one page theme designed to help app developers promote their mobile apps</span>
+          <span class="project-title"><a href="https://wgtn-rug.github.io/questionnaire/wrug_responses_analysis.html">WRUG Questionnaire Results</a></span> - <span class="project-tagline">
+            created using <code>rmarkdown</code> to visualise the results from the WRUG community questionnaire.
+          </span>
         </div>
-      </section> -->
+      </section>
 
       <section class="skills-section section">
         <h2 class="section-title"><i class="fa fa-rocket"></i>Skills &amp; Proficiency</h2>
@@ -272,9 +284,17 @@
           </div><!--//item-->
 
           <div class="item">
+            <h3 class="level-title">SQL</h3>
+            <div class="level-bar">
+              <div class="level-bar-inner" data-level="80%">
+              </div>
+            </div><!--//level-bar-->
+          </div><!--//item-->
+
+          <div class="item">
             <h3 class="level-title">Javascript &amp; HTML</h3>
             <div class="level-bar">
-              <div class="level-bar-inner" data-level="75%">
+              <div class="level-bar-inner" data-level="70%">
               </div>
             </div><!--//level-bar-->
           </div><!--//item-->
@@ -295,7 +315,7 @@
         <div class="comic">
           <a href="https://www.storyboardthat.com/storyboards/c-mac/dplyr--mutate">
             <img src="//sbt.blob.core.windows.net/storyboards/c-mac/dplyr--mutate.png"
-            style="width: 850px; z-index: 1; position: relative;"/>
+            style="width: 100%; z-index: 1; position: relative;"/>
           </a>
           <br>
           <a href="http://www.storyboardthat.com">Made with Storyboard That</a>
@@ -313,12 +333,21 @@
             library(ggplot2)
             library(dplyr)
 
-            ggplot(mpg, aes(class)) +
+            ggplot(mpg, aes(reorder(class, class, function(x) length(x)))) +
                 geom_bar(fill = "grey", width = 0.6) +
                 geom_bar(data = filter(mpg, class == "suv"),
                          fill = "steelblue", width = 0.6) +
                 coord_flip() +
-                ggtitle("Most cars in this dataset are SUVs")
+                ggtitle("Most cars in this dataset are SUVs") +
+                xlab("Class") +
+                theme_minimal() +
+                theme(panel.grid = element_blank()
+                      ,panel.background = element_rect(fill = "transparent",
+                        colour = NA)
+                      ,plot.background = element_rect(fill = "transparent",
+                        colour = NA)
+                      ,axis.line.x = element_line(colour = "grey")
+                      ,axis.ticks.x = element_line(colour = "grey"))
 
           </code>
           <code data-type="solution">
@@ -366,12 +395,12 @@
       $(function(){
           $(".typed").typed({
               strings: [
-                "Data Explorer",
-                "Data Wrangler",
-                "Data Visualiser",
-                "Data Communicator",
-                "Data Analyst",
-                "Data Scientist"
+                "Explorer",
+                "Wrangler",
+                "Visualiser",
+                "Communicator",
+                "Analyst",
+                "Scientist"
 
               ],
               typeSpeed: 130
