--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
           <li class="github"><i class="fa fa-github"></i><a href="https://github.com/conrad-mac" target="_blank">conrad-mac</a></li>
           <li class="stackoverflow"><i class="fa fa-stack-overflow"></i><a href="http://stackoverflow.com/users/7359650/conrad-mac" target="_blank">conrad-mac</a></li>
           <!--li class="twitter"><i class="fa fa-twitter"></i><a href="https://twitter.com/3rdwave_themes" target="_blank">@twittername</a></li-->
+          <li class="email"><i class="fa fa-envelope"></i>conrad . maccormick at gmail . com</li>
         </ul>
       </div><!--//contact-container-->
       <div class="education-container container-block">
