--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
         </div>
         <div class="item">
           <span class="project-title"><a href="https://conrad.shinyapps.io/vplyr/">vplyr</a></span> - <span class="project-tagline">
-            uses R, <a href="https://shiny.rstudio.com/">shiny</a> and <a href="https://www.talater.com/annyang/">annyang</a> to analyse and visualise data using speech recognition
+            uses R, <a href="https://shiny.rstudio.com/">shiny</a> and <a href="https://www.talater.com/annyang/">annyang</a> to analyse and visualise data using speech recognition - only works with Chrome browser
             (<a href="https://github.com/conrad-mac/vplyr">code</a>).
           </span>
         </div>
