Added published section. Added a couple more skills.

--- a/index.html
+++ b/index.html
@@ -301,6 +301,14 @@
           </div><!--//item-->
 
           <div class="item">
+            <h3 class="level-title">Git</h3>
+            <div class="level-bar">
+              <div class="level-bar-inner" data-level="60%">
+              </div>
+            </div><!--//level-bar-->
+          </div><!--//item-->
+
+          <div class="item">
             <h3 class="level-title">Python</h3>
             <div class="level-bar">
               <div class="level-bar-inner" data-level="50%">
@@ -308,7 +316,36 @@
             </div><!--//level-bar-->
           </div><!--//item-->
 
+          <div class="item">
+            <h3 class="level-title">Node.js</h3>
+            <div class="level-bar">
+              <div class="level-bar-inner" data-level="50%">
+              </div>
+            </div><!--//level-bar-->
+          </div><!--//item-->
+
         </div>
+      </section><!--//skills-section-->
+
+      <section class="published-section section">
+        <h2 class="section-title"><i class="fa fa-book"></i>Published Work</h2>
+
+        <div class="item">
+          <span class="project-tagline"><a href="http://www.treasury.govt.nz/publications/research-policy/ap/2016/16-01">Christopher Ball, Sarah Crichton, Robert Templeton and Sarah Tumen, Rissa Ota and Conrad MacCormick (2016). <b>Characteristics of Children at Greater Risk of Poor Outcomes as Adults</b></a></span>
+        </div>
+
+        <br>
+
+        <div class="item">
+          <span class="project-tagline"><a href="http://stats.govt.nz/methods/research-papers/methodology-time-series-data.aspx">Buchanan, R and MacCormick, C (2014). <b>Comparing revisions in time series data: A report on seasonally adjusted versus trend series.</b></a></span>
+        </div>
+
+        <br>
+
+        <div class="item">
+          <span class="project-tagline"><a href="http://www.stats.govt.nz/browse_for_stats/income-and-work/employment_and_unemployment/new-quality-measures-hlfs.aspx">Griffiths, D and MacCormick, C (2013). <b>New Quality Measures for the Household Labour Force Survey</b></a></span>
+        </div>
+
       </section><!--//skills-section-->
 
       <!-- <section class="section comic-section">
@@ -339,7 +376,7 @@
                 geom_bar(data = filter(mpg, class == "suv"),
                          fill = "steelblue", width = 0.6) +
                 coord_flip() +
-                ggtitle("Most cars in this dataset are SUVs") +
+                ggtitle("Most cars in this dataset are SUVs!") +
                 xlab("Class") +
                 theme_minimal() +
                 theme(panel.grid = element_blank()
