Updated with new role

--- a/index.html
+++ b/index.html
@@ -114,16 +114,13 @@
         <div class="item">
           <div class="meta">
             <div class="upper-row">
-              <h3 class="job-title">Senior Analyst</h3>
-              <div class="time">July 2017 - Present</div>
+              <h3 class="job-title">Data Analyst</h3>
+              <div class="time">January 2018 - present</div>
             </div><!--//upper-row-->
-            <div class="company">Social Investment Agency</div>
+            <div class="company">Electricity Authority</div>
           </div><!--//meta-->
           <div class="details">
-            <p>As of July 2017, the Social Investment Unit became the Social Investment Agency.
-              I remain seconded as a Senior Analyst. My responsibilities in this role include
-              using Statistics NZ’s Integrated Data Infrastructure (IDI) to explore and understand the effectiveness
-              of government investment in social services.</p>
+            <p>I currently work as a Data Analyst in the Market Analytics team at the Electricity Authority.</p>
           </div><!--//details-->
         </div><!--//item-->
 
@@ -131,13 +128,14 @@
           <div class="meta">
             <div class="upper-row">
               <h3 class="job-title">Senior Analyst</h3>
-              <div class="time">April 2016 - June 2017</div>
+              <div class="time">April 2016 - December 2017</div>
             </div><!--//upper-row-->
-            <div class="company">Social Investment Unit</div>
+            <div class="company">Social Investment Agency/Unit</div>
           </div><!--//meta-->
           <div class="details">
-            <p>As of April 2016, the Social Sector Investment Change Program became the Social Investment Unit.
-              I was seconded to the team as a Senior Analyst. My responsibilities in this role included
+            <p>In April 2016, the Social Sector Investment Change Program became the Social Investment Unit and,
+              in July 2017, the Social Investment Unit became the Social Investment Agency.
+              I was seconded as a Senior Analyst. My responsibilities in this role included
               using Statistics NZ’s Integrated Data Infrastructure (IDI) to explore and understand the effectiveness
               of government investment in social services.</p>
           </div><!--//details-->
@@ -152,7 +150,7 @@
             <div class="company">Social Sector Investment Change Program (SSICP)</div>
           </div><!--//meta-->
           <div class="details">
-            <p>From October 2015 I was located at the Treasury as part of the Social Sector
+            <p>From October 2015 I was part of the Social Sector
               Investment Change Programme (SSICP). My role involved coordinating and helping to
               project manage a software proof-of-concept which included stakeholder engagement
               with both NGOs and a variety of government agencies.</p>
@@ -169,7 +167,7 @@
           </div><!--//meta-->
           <div class="details">
             <p>
-              In September 2015 I was located at the Treasury to sit with the Analytics and Insights team.
+              In September 2015 I was located at the Treasury to work with the Analytics and Insights team.
               I helped to analyse and understand the life pathways of young New Zealanders using Statistics
               New Zealand’s Integrated Data Infrastructure (IDI).
             </p>
@@ -186,12 +184,9 @@
           </div><!--//meta-->
           <div class="details">
             <p>
-              My role at the Ministry of Social Development is as a Forecasting and Costing Analyst.
-              My responsibilities include regular forecasting of Vote Social Development appropriations
+              My role at the Ministry of Social Development was as a Forecasting and Costing Analyst.
+              My responsibilities included regular forecasting of Vote Social Development appropriations
               and cost modelling of benefit-related policies.
-            </p>
-            <p>
-              <i>I have been on secondment from this role since September 2015.</i>
             </p>
 
           </div><!--//details-->
@@ -224,6 +219,11 @@
           <span class="project-title"><a href="https://conrad.shinyapps.io/vplyr/">vplyr</a></span> - <span class="project-tagline">
             uses R, <a href="https://shiny.rstudio.com/">shiny</a> and <a href="https://www.talater.com/annyang/">annyang</a> to analyse and visualise data using speech recognition - only works with Chrome browser
             (<a href="https://github.com/conrad-mac/vplyr">code</a>).
+          </span>
+        </div>
+        <div class="item">
+          <span class="project-title"><a href="https://conrad-mac.github.io/japan-photo-diary">Japan Photo Diary</a></span> - <span class="project-tagline">
+            uses the <a href="https://github.com/turban/Leaflet.Photo">Leaflet.Photo</a> library to showcase a selection of photos from our holiday in Japan in 2017.
           </span>
         </div>
         <div class="item">
